syntax = "proto3";

option java_package = "com.example.baseproject.proto";
option java_multiple_files = true;

message UserDataPreferences {
  string first_name = 1;
  string last_name = 2;
  string email_address = 3;
}